Mudanças no Layout da página

--- a/Portfolio.WebSite/Portfolio.WebSite/Views/Sobre/Index.cshtml
+++ b/Portfolio.WebSite/Portfolio.WebSite/Views/Sobre/Index.cshtml
@@ -5,11 +5,12 @@
 <div class="text-center" style="margin-top: 25px;">
     <div class="row card-container">
 
-        <div style=" display: inline-flex;">
+        <div class="responsivo-sobre-mim">
 
+            @*<img class="img-perfil img-profile " src="~/lib/materialize/imagens/perfil.jpg" />*@
             <img class="img-perfil img-profile" src="~/lib/materialize/imagens/perfil.jpg" />
 
-            <div class="embed-responsive sobre-mim">
+            <div class="sobre-mim">
                 <h2 style="text-align: justify;">Sobre mim...</h2>
                 <br />
                 Olá meu nome é Sweny Cassinoni Siqueira, tenho 25 anos e trabalho na área de Tecnologia há 2 anos.
