--- a/Portfolio.WebSite/Portfolio.WebSite/Views/Shared/_Layout.cshtml
+++ b/Portfolio.WebSite/Portfolio.WebSite/Views/Shared/_Layout.cshtml
@@ -10,14 +10,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="background-principal">
             <div class="nav-wrapper" style="display: flex;">
-                <a class="meu-nome" style=" padding: 0 100px;">Sweny Cassinoni <img class="meu-logo" src="~/lib/materialize/imagens/programming-code-signs.png" style="width:35px; height:35px;" /></a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <a class="meu-nome" style=" padding: 0 100px;">
+                    Sweny Cassinoni
+                    <img class="meu-logo" src="~/lib/materialize/imagens/programming-code-signs.png" style="width:35px; height:35px;" />
+                </a>
 
-                <ul id="nav-mobile" class="right">
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a class="waves-effect waves-light backgroud-hover-link" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a class="waves-effect waves-light backgroud-hover-link" asp-controller="Sobre" asp-action="Index">Sobre mim</a></li>
                     <li><a class="waves-effect waves-light backgroud-hover-link" asp-controller="Experiencias" asp-action="Index">Experiências</a></li>
@@ -25,6 +30,14 @@
                 </ul>
             </div>
         </nav>
+
+        <ul class="sidenav" id="mobile-demo">
+            <li><a class="waves-effect waves-light backgroud-hover-link" asp-controller="Home" asp-action="Index">Home</a></li>
+            <li><a class="waves-effect waves-light backgroud-hover-link" asp-controller="Sobre" asp-action="Index">Sobre mim</a></li>
+            <li><a class="waves-effect waves-light backgroud-hover-link" asp-controller="Experiencias" asp-action="Index">Experiências</a></li>
+            <li><a class="waves-effect waves-light backgroud-hover-link" asp-controller="Certificados" asp-action="Index">Certificados</a></li>
+        </ul>
+
     </header>
 
     <main role="main" style="font-family: 'Merriweather', serif; " class="pb-3">
@@ -71,6 +84,11 @@
     <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
 
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var elems = document.querySelectorAll('.sidenav');
+            var instances = M.Sidenav.init(elems);
+        });
+
         $(function () {
             window.sr = ScrollReveal();
 
